Updated global image folder and fixed references

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="images/cmms-8bit-logo.png" alt="Cougar Mountain Middle School" class="logo">
+            <img src="global-images/cmms-8bit-logo.png" alt="Cougar Mountain Middle School" class="logo">
             <h1>SeeSeePortal</h1>
         </div>
         <p class="subtitle">Games created by Cougar Mountain Middle School Game Design students</p>
