Added test game

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <div class="container">
             <div class="about-content">
                 <h2>About SeeSeePortal</h2>
-                <p>Welcome to SpaceInvadeer.com, the totally-not-suspicious, definitely-not-blocked, parody version of that game site everyone keeps trying to open during class. You know the one. Yeah… that one.</p>
+                <p>Welcome to SeeSeePortal, the totally-not-suspicious, definitely-not-blocked, parody version of that game site everyone keeps trying to open during class. You know the one. Yeah… that one.</p>
                 
                 <p>But here’s the twist:</p>
                 <p><strong>Every game on this site was actually created by middle school game designers.</strong></p>
@@ -347,12 +347,12 @@
         const games = [
             // Trimester 1 Games
             {
-                title: "Space Adventure",
+                title: "Test Game",
                 trimester: "trimester1",
                 thumbnail: "🚀",
                 description: "Navigate through space and avoid asteroids in this exciting game!",
-                author: "Alex Johnson",
-                folder: "games/space-adventure"
+                author: "AJ",
+                folder: "games/2025-2026/t1/test-game"
             },
             {
                 title: "Catch the Falling Stars",
