--- a/games/2025-2026/t1/test-game/index.html
+++ b/games/2025-2026/t1/test-game/index.html
@@ -1,37 +1,161 @@
-
-<html>
-  <head>
-    <title>my-app</title>
-    <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
-        <script src="gamelab-api.js"></script>
-    <link href="gamelab.css" rel="stylesheet" type="text/css">
-    <script src="p5.js"></script>
-    <script src="p5.play.js"></script>
-    <script src="code.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Space Adventure - SeeSeePortal</title>
     <style>
-      body.expo {
-        background-color: black;
-      }
-      #sketch.expo.no-controls {
-        top: 82px;
-      }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #0033A0 0%, #999ACA 100%);
+            min-height: 100vh;
+            color: #FFFFFF;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 40px 20px;
+            overflow-y: auto;
+        }
+
+        .game-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-width: 800px;
+            width: 100%;
+        }
+
+        .game-frame {
+            background: rgba(255, 255, 255, 0.95);
+            border: 3px solid #FDB71A;
+            border-radius: 15px;
+            padding: 10px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            margin-bottom: 30px;
+            overflow: hidden;
+        }
+
+        .game-iframe {
+            display: block;
+            border: none;
+            width: 400px;
+            height: 565px;
+        }
+
+        .game-info {
+            background: rgba(255, 255, 255, 0.95);
+            color: #333;
+            padding: 30px;
+            border-radius: 15px;
+            width: 100%;
+            max-width: 600px;
+            text-align: center;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .game-info h1 {
+            color: #0033A0;
+            font-size: 2em;
+            margin-bottom: 15px;
+        }
+
+        .game-info .description {
+            color: #666;
+            font-size: 1.1em;
+            line-height: 1.6;
+            margin-bottom: 15px;
+        }
+
+        .game-info .meta {
+            color: #999ACA;
+            font-size: 0.95em;
+            margin-top: 15px;
+            padding-top: 15px;
+            border-top: 2px solid #eee;
+        }
+
+        .game-info .meta strong {
+            color: #0033A0;
+        }
+
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background: rgba(253, 183, 26, 0.9);
+            color: #0033A0;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 25px;
+            font-size: 16px;
+            font-weight: 600;
+            cursor: pointer;
+            text-decoration: none;
+            transition: all 0.3s;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            display: inline-block;
+        }
+
+        .back-button:hover {
+            background: #FDB71A;
+            transform: scale(1.05);
+        }
+
+        @media (max-width: 768px) {
+            body {
+                padding: 20px 10px;
+            }
+
+            .game-iframe {
+                width: 100%;
+                max-width: 400px;
+            }
+
+            .game-frame {
+                width: 100%;
+            }
+
+            .game-info h1 {
+                font-size: 1.5em;
+            }
+
+            .game-info {
+                padding: 20px;
+            }
+
+            .back-button {
+                position: static;
+                margin-bottom: 20px;
+            }
+        }
     </style>
-  </head>
-  <body class="web" style="margin:0; overflow:hidden; user-select:none; -webkit-user-select:none; -webkit-touch-callout:none; position:fixed; top:0; left:0; width:400px; height:565px;">
-    <div id="sketch" class="web" style="position:absolute;"></div>
-    <div id="soft-buttons" style="display: none">
-      <button id="leftButton" disabled className="arrow">
-      </button>
-      <button id="rightButton" disabled className="arrow">
-      </button>
-      <button id="upButton" disabled className="arrow">
-      </button>
-      <button id="downButton" disabled className="arrow">
-      </button>
+</head>
+<body>
+    <a href="/index.html" class="back-button">← Back to Portal</a>
+    
+    <div class="game-container">
+        <div class="game-frame">
+            <iframe src="game-index.html" class="game-iframe" scrolling="no" allow="scripts"></iframe>
+        </div>
+
+        <div class="game-info">
+            <h1>Space Adventure</h1>
+            <p class="description">
+                Navigate through space and avoid asteroids in this exciting game! 
+                Use the arrow keys to control your spaceship and see how long you can survive.
+            </p>
+            <div class="meta">
+                <strong>Created by:</strong> Alex Johnson<br>
+                <strong>Published:</strong> November 15, 2024
+            </div>
+        </div>
     </div>
-    <div id="studio-dpad-container" style="position:absolute; width:400px; bottom:5px; height:157px; overflow-y:hidden;">
-    </div>
-  </body>
+</body>
 </html>
