--- a/index.html
+++ b/index.html
@@ -212,6 +212,15 @@
             margin-bottom: 15px;
         }
 
+        .about-content ul {
+            margin-left: 20px;
+            margin-bottom: 15px;
+        }
+
+        .about-content li {
+            margin-bottom: 8px;
+        }
+
         footer {
             text-align: center;
             padding: 30px;
