--- a/games/2025-2026/t1/test-game/game-index.html
+++ b/games/2025-2026/t1/test-game/game-index.html
@@ -17,6 +17,15 @@
       #sketch.expo.no-controls {
         top: 82px;
       }
+      body.expo {
+        background-color: black;
+      }
+      #sketch.expo.no-controls {
+        top: 82px;
+      }
+      #studio-dpad-container {
+        display: none !important;
+      }
     </style>
   </head>
   <body class="web" style="margin:0; overflow:hidden; user-select:none; -webkit-user-select:none; -webkit-touch-callout:none; position:fixed; top:0; left:0; width:400px; height:565px;">
