Tweaking and testing

--- a/games/2025-2026/t1/dodge-skeletons/index.html
+++ b/games/2025-2026/t1/dodge-skeletons/index.html
@@ -46,7 +46,7 @@
             display: block;
             border: none;
             width: 400px;
-            height: 565px;
+            height: 408px;
         }
 
         .game-info {
@@ -150,11 +150,11 @@
         <div class="game-info">
             <h1>Dodge the Skeletons</h1>
             <p class="description">
-                Move around the screen to dodge the skeletons.
+                Start as a mini pekka and work your way up to beedme EVO Pekka.
             </p>
             <div class="meta">
                 <strong>Created by:</strong> Ethan Tea<br>
-                <strong>Published:</strong> November 8, 2025
+                <strong>Published:</strong> November 18, 2025
             </div>
         </div>
     </div>
