--- a/index.html
+++ b/index.html
@@ -361,15 +361,15 @@
         const games = [
             // Trimester 1 Games
             {
-                title: "Test Game",
+                title: "Dodge the Skeletons",
                 trimester: "trimester1",
-                thumbnail: "🚀",
-                description: "Navigate through space and avoid asteroids in this exciting game!",
-                author: "AJ",
-                folder: "games/2025-2026/t1/test-game"
+                thumbnail: "💀",
+                description: "Move around the screen to dodge the skeletons.",
+                author: "Ethan Tea",
+                folder: "games/2025-2026/t1/dodge-skeletons"
             },
             {
-                title: "Catch the Falling Stars",
+                title: "Sample - Catch the Falling Stars",
                 trimester: "trimester1",
                 thumbnail: "⭐",
                 description: "Move your basket to catch as many falling stars as you can.",
@@ -377,7 +377,7 @@
                 folder: "games/catch-stars"
             },
             {
-                title: "Simple Maze",
+                title: "Sample - Simple Maze",
                 trimester: "trimester1",
                 thumbnail: "🧩",
                 description: "Guide your character through the maze to reach the goal.",
