Updated iframe size and added restart message

--- a/games/2025-2026/t1/dodge-skeletons/index.html
+++ b/games/2025-2026/t1/dodge-skeletons/index.html
@@ -45,8 +45,8 @@
         .game-iframe {
             display: block;
             border: none;
-            width: 400px;
-            height: 408px;
+            width: 401px;
+            height: 401px;
         }
 
         .game-info {
@@ -146,6 +146,7 @@
         </div>
 
         <div><p><em>Click into the game frame to start.</em></p><br></div>
+        <div><p><em>Refresh the screen to restart the game if it doesn't restart itself.</em></p></div>
 
         <div class="game-info">
             <h1>Dodge the Skeletons</h1>
@@ -153,7 +154,7 @@
                 Start as a mini pekka and work your way up to beedme EVO Pekka.
             </p>
             <div class="meta">
-                <strong>Created by:</strong> Ethan Tea<br>
+                <strong>Created by:</strong> ET<br>
                 <strong>Published:</strong> November 18, 2025
             </div>
         </div>
