Added 4 more games

--- a/index.html
+++ b/index.html
@@ -384,10 +384,33 @@
                 trimester: "trimester1",
                 thumbnail: "💀",
                 description: "Move around the screen to dodge the skeletons.",
-                author: "Ethan Tea",
+                author: "ET",
                 folder: "games/2025-2026/t1/dodge-skeletons"
             },
-            
+            {
+                title: "Alien Fight",
+                trimester: "trimester1",
+                thumbnail: "💀",
+                description: "Aliens will try to attack the player and in order for the player to win he needs to collect all the humans.",
+                author: "EF",
+                folder: "games/2025-2026/t1/alien-fight"
+            }, 
+            {
+                title: "Ball of Doom",
+                trimester: "trimester1",
+                thumbnail: "💀",
+                description: "You are a rolling ball that jump and there are obstacles.",
+                author: "FK",
+                folder: "games/2025-2026/t1/ball-of-doom"
+            }, 
+            {
+                title: "PvP Battles",
+                trimester: "trimester1",
+                thumbnail: "💀",
+                description: "Battle against your friends.",
+                author: "RD",
+                folder: "games/2025-2026/t1/pvp-battles"
+            },
             // Trimester 2 Games
             
             // Trimester 3 Games
