--- a/index.html
+++ b/index.html
@@ -411,6 +411,14 @@
                 author: "RD",
                 folder: "games/2025-2026/t1/pvp-battles"
             },
+            {
+                title: "The Buzzers",
+                trimester: "trimester1",
+                thumbnail: "💀",
+                description: "Try not to die and collect gold.",
+                author: "JL",
+                folder: "games/2025-2026/t1/the-buzzers"
+            },
             // Trimester 2 Games
             
             // Trimester 3 Games
