Created AI Usage page and added comments

--- a/games/2025-2026/t1/test-game/index.html
+++ b/games/2025-2026/t1/test-game/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Adventure - SeeSeePortal</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -12,7 +15,7 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Poppins', sans-serif;
             background: linear-gradient(135deg, #0033A0 0%, #999ACA 100%);
             min-height: 100vh;
             color: #FFFFFF;
@@ -154,8 +157,8 @@
                 Use the arrow keys to control your spaceship and see how long you can survive.
             </p>
             <div class="meta">
-                <strong>Created by:</strong> Alex Johnson<br>
-                <strong>Published:</strong> November 15, 2024
+                <strong>Created by: AJ</strong><br>
+                <strong>Published: November 19, 2025</strong>
             </div>
         </div>
     </div>
