--- a/games/2025-2026/t1/the-buzzers/index.html
+++ b/games/2025-2026/t1/the-buzzers/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Buzzers - SeeSeePortal</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -12,7 +15,7 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Poppins', sans-serif;
             background: linear-gradient(135deg, #0033A0 0%, #999ACA 100%);
             min-height: 100vh;
             color: #FFFFFF;
@@ -74,7 +77,7 @@
         }
 
         .game-info .meta {
-            color: #999ACA;
+            color: #0033A0;
             font-size: 0.95em;
             margin-top: 15px;
             padding-top: 15px;
@@ -154,8 +157,8 @@
                 You go up and down trying to avoid the rocks and obstacles essentially. You are a bee with one mission - survive! Also collect flowers and gold along the way.
             </p>
             <div class="meta">
-                <strong>Created by:</strong> JL<br>
-                <strong>Published:</strong> November 19, 2025
+                <strong>Created by: JL</strong><br>
+                <strong>Published: November 19, 2025</strong>
             </div>
         </div>
     </div>
