--- a/games/2025-2026/t1/ball-of-doom/index.html
+++ b/games/2025-2026/t1/ball-of-doom/index.html
@@ -158,7 +158,8 @@
             </p>
             <div class="meta">
                 <strong>Created by: FK</strong><br>
-                <strong>Published: November 19, 2025</strong>
+                <strong>Published: November 19, 2025</strong><br>
+                <a href="https://studio.code.org/projects/gamelab/6paaUGLc5oKshgwm_qJI97LCNbCOLiv5mZEfezWSPRY">Code.org Source</a>
             </div>
         </div>
     </div>
