--- a/games/2025-2026/t1/dodge-skeletons/index.html
+++ b/games/2025-2026/t1/dodge-skeletons/index.html
@@ -158,8 +158,10 @@
             </p>
             <div class="meta">
                 <strong>Created by: ET</strong><br>
-                <strong>Published: November 18, 2025</strong>
+                <strong>Published: November 18, 2025</strong><br>
+                <a href="https://studio.code.org/projects/gamelab/L35fDVJ0NcbKUmQOLePyWiTkvHySllLAYHKHMZmeWNc">Code.org Source</a>
             </div>
+
         </div>
     </div>
 </body>
