--- a/games/2025-2026/t1/pvp-battles/index.html
+++ b/games/2025-2026/t1/pvp-battles/index.html
@@ -158,7 +158,8 @@
             </p>
             <div class="meta">
                 <strong>Created by: RD</strong><br>
-                <strong>Published: November 19, 2025</strong>
+                <strong>Published: November 19, 2025</strong><br>
+                <a href="https://studio.code.org/projects/gamelab/w4Jb6DiacHeoSm3Cbb006QAKn-uuzq6cNgTMC_ESHCM">Code.org Source</a>
             </div>
         </div>
     </div>
