--- a/games/2025-2026/t1/test-game/index.html
+++ b/games/2025-2026/t1/test-game/index.html
@@ -158,7 +158,8 @@
             </p>
             <div class="meta">
                 <strong>Created by: AJ</strong><br>
-                <strong>Published: November 19, 2025</strong>
+                <strong>Published: November 19, 2025</strong><br>
+                <a href="">Code.org Source</a>
             </div>
         </div>
     </div>
