--- a/games/2025-2026/t1/the-buzzers/index.html
+++ b/games/2025-2026/t1/the-buzzers/index.html
@@ -158,7 +158,8 @@
             </p>
             <div class="meta">
                 <strong>Created by: JL</strong><br>
-                <strong>Published: November 19, 2025</strong>
+                <strong>Published: November 19, 2025</strong><br>
+                <a href="https://studio.code.org/projects/gamelab/E8BKVS0bQVfKbPXvJBfBLrbkllHVMBWHcL4975cPG00">Code.org Source</a>
             </div>
         </div>
     </div>
