Added evil 67 game

--- a/index.html
+++ b/index.html
@@ -437,6 +437,14 @@
             // Trimester 1 Games (trimester: trimester1)
             // Need one array for every game. 
             {
+                title: "Evil 67 Bossfight",
+                trimester: "trimester1",
+                thumbnail: "games/2025-2026/t1/evil-67-bossfight/assets/api/v1/animation-library/gamelab/MNXTe9Vzbt4fPkzUHwmt2Pbzfo4_Gw07/category_icons/planet04.png",
+                description: "Dodge evil 67 kids' attacks.",
+                author: "EH",
+                folder: "games/2025-2026/t1/evil-67-bossfigtht"
+            },
+            {
                 title: "Dodge the Skeletons",
                 trimester: "trimester1",
                 thumbnail: "games/2025-2026/t1/dodge-skeletons/assets/e67999c9-672e-4ec9-9f2d-e0434c2128bd.png",
