--- a/games/2025-2026/t1/evil-67-bossfight/index.html
+++ b/games/2025-2026/t1/evil-67-bossfight/index.html
@@ -159,7 +159,7 @@
             <div class="meta">
                 <strong>Created by: EH</strong><br>
                 <strong>Published: November 19, 2025</strong><br>
-                <a href="">Code.org Source</a>
+                <a href="https://studio.code.org/projects/gamelab/JcM9PLF767X6DpG1lqvTlp-TQKYbLRdy5ldNqBpjddU">Code.org Source</a>
             </div>
         </div>
     </div>
