Added more games to game array

--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
                 trimester: "trimester1",
                 thumbnail: "games/2025-2026/t1/evil-67-bossfight/assets/584fbc40-fb12-4c6c-88c9-c1141bf2d8cf.png",
                 description: "Dodge evil 67 kids' attacks.",
+                players: "1",
                 author: "EH",
                 folder: "games/2025-2026/t1/evil-67-bossfight"
             },
@@ -449,6 +450,7 @@
                 trimester: "trimester1",
                 thumbnail: "games/2025-2026/t1/dodge-skeletons/assets/e67999c9-672e-4ec9-9f2d-e0434c2128bd.png",
                 description: "Move around the screen to dodge the skeletons.",
+                players: "1",
                 author: "ET",
                 folder: "games/2025-2026/t1/dodge-skeletons"
             },
@@ -457,6 +459,7 @@
                 trimester: "trimester1",
                 thumbnail: "games/2025-2026/t1/alien-fight/assets/07f7fa98-40e4-497d-9e29-384529450198.png",
                 description: "Aliens will try to attack the player and in order for the player to win he needs to collect all the humans.",
+                players: "1",
                 author: "EF",
                 folder: "games/2025-2026/t1/alien-fight"
             }, 
@@ -473,6 +476,7 @@
                 trimester: "trimester1",
                 thumbnail: "games/2025-2026/t1/pvp-battles/assets/1ec0754a-b522-4e3d-8d91-4e25c5a7a670.png",
                 description: "Battle against your friends.",
+                players: "2",
                 author: "RD",
                 folder: "games/2025-2026/t1/pvp-battles"
             },
@@ -481,9 +485,74 @@
                 trimester: "trimester1",
                 thumbnail: "games/2025-2026/t1/the-buzzers/assets/api/v1/animation-library/gamelab/N602_cNy0LoPLXkwaUfCp2XJWPo86SUw/category_animals/bee.png",
                 description: "Try not to die and collect gold.",
+                players: "1",
                 author: "JL",
                 folder: "games/2025-2026/t1/the-buzzers"
             },
+            {
+                title: "Hollow Knight vs. Hornet",
+                trimester: "trimester1",
+                thumbnail: "",
+                description: "Play as a character from Hollow Knight and fight a character called Hornet.",
+                players: "1",
+                author: "MK",
+                folder: "games/2025-2026/t1/hollow-knight-v-hornet"
+            },
+            {
+                title: "Manage a Shedletsky",
+                trimester: "trimester1",
+                thumbnail: "",
+                description: "Keep Shedletsky alive (and happy).",
+                players: "1",
+                author: "XL",
+                folder: "games/2025-2026/t1/manage-shedletsky"
+            },
+            {
+                title: "Astroid Blaster",
+                trimester: "trimester1",
+                thumbnail: "",
+                description: "Destroy as many astroids to get a high score as they get faster and faster.",
+                players: "1",
+                author: "GB",
+                folder: "games/2025-2026/t1/astroid-blaster"
+            },
+            {
+                title: "SMILE",
+                trimester: "trimester1",
+                thumbnail: "",
+                description: "A 2D dungeon crawler.",
+                players: "1",
+                author: "EM",
+                folder: "games/2025-2026/t1/smile"
+            },
+            {
+                title: "CFB27",
+                trimester: "trimester1",
+                thumbnail: "",
+                description: "Get your team to the national championship.",
+                players: "2",
+                author: "RA",
+                folder: "games/2025-2026/t1/cfb-27"
+            },
+            {
+                title: "Paintball Mayhem",
+                trimester: "trimester1",
+                thumbnail: "",
+                description: "1v1 paintball fights",
+                players: "2",
+                author: "BK",
+                folder: "games/2025-2026/t1/paintball-mayhem"
+            },
+            {
+                title: "Stick Parkour Speed Run",
+                trimester: "trimester1",
+                thumbnail: "",
+                description: "A stick man runs and dodges objects.",
+                players: "1",
+                author: "EN",
+                folder: "games/2025-2026/t1/stick-parkour-speed-run"
+            },
+
             // Trimester 2 Games (trimester: trimester2)
             // Need one array for every game.
 
