Added more games

--- a/index.html
+++ b/index.html
@@ -525,19 +525,19 @@
                 author: "EM",
                 folder: "games/2025-2026/t1/smile"
             },
-            {
-                title: "CFB27",
-                trimester: "trimester1",
-                thumbnail: "",
-                description: "Get your team to the national championship.",
-                players: "2",
-                author: "RA",
-                folder: "games/2025-2026/t1/cfb-27"
-            },
+            //{
+            //    title: "CFB27",
+            //    trimester: "trimester1",
+            //    thumbnail: "",
+            //    description: "Get your team to the national championship.",
+            //    players: "2",
+            //    author: "RA",
+            //    folder: "games/2025-2026/t1/cfb-27"
+            //},
             {
                 title: "Paintball Mayhem",
                 trimester: "trimester1",
-                thumbnail: "",
+                thumbnail: "games/2025-2026/t1/paintball-mayhem/assets/eb58caea-71ed-4272-a371-dbcde8bbfe04.png",
                 description: "1v1 paintball fights",
                 players: "2",
                 author: "BK",
@@ -546,7 +546,7 @@
             {
                 title: "Stick Parkour Speed Run",
                 trimester: "trimester1",
-                thumbnail: "",
+                thumbnail: "games/2025-2026/t1/stick-parkour-speed-run/assets/ab002dd0-7c89-4dcd-85bb-61b9ec85e602.png",
                 description: "A stick man runs and dodges objects.",
                 players: "1",
                 author: "EN",
