--- a/index.html
+++ b/index.html
@@ -12,311 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- CSS style sheet for the index page -->
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #0033A0 0%, #999ACA 100%);
-            min-height: 100vh;
-            color: #FFFFFF;
-        }
-
-        header {
-            background: rgba(0, 0, 0, 0.3);
-            padding: 30px 20px;
-            text-align: center;
-            backdrop-filter: blur(10px);
-        }
-
-        .logo-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 10px;
-        }
-
-        .logo {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        h1 {
-            font-size: 3em;
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        }
-
-        .subtitle {
-            font-size: 1.2em;
-            color: rgba(255, 255, 255, 0.9);
-            margin-bottom: 20px;
-        }
-
-        nav {
-            margin-top: 15px;
-        }
-
-        nav a {
-            color: #FFFFFF;
-            text-decoration: none;
-            margin: 0 15px;
-            padding: 8px 16px;
-            border-radius: 5px;
-            transition: background 0.3s;
-            font-weight: 500;
-        }
-
-        nav a:hover, nav a.active {
-            background: rgba(253, 183, 26, 0.3);
-        }
-
-        .container {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .search-bar {
-            text-align: center;
-            padding: 20px;
-        }
-
-        .search-bar input {
-            width: 60%;
-            max-width: 500px;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 25px;
-            font-size: 16px;
-            outline: none;
-        }
-
-        .trimester-toggles {
-            text-align: center;
-            padding: 10px;
-            margin-bottom: 0px;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        .trimester-toggles button {
-            background: rgba(153, 154, 202, 0.3);
-            border: 2px solid #FFFFFF;
-            color: #FFFFFF;
-            padding: 12px 30px;
-            margin: 5px;
-            border-radius: 25px;
-            cursor: pointer;
-            transition: all 0.3s;
-            font-size: 16px;
-            font-weight: 600;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        .trimester-toggles button:hover,
-        .trimester-toggles button.active {
-            background: #FDB71A;
-            color: #0033A0;
-            border-color: #FDB71A;
-            transform: scale(1.05);
-        }
-
-        .games-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-            gap: 25px;
-            padding: 20px;
-            justify-items: center;
-        }
-
-        .game-card {
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 15px;
-            overflow: hidden;
-            cursor: pointer;
-            transition: transform 0.3s, box-shadow 0.3s;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-            color: #333;
-            max-width: 280px;
-            width: 100%;
-            flex-shrink: 0;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .game-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.3);
-        }
-
-        .game-thumbnail {
-            width: 100%;
-            height: 200px;
-            background: linear-gradient(135deg, #FDB71A 0%, #E5A615 100%);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 60px;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .game-thumbnail img {
-            width: 50%;
-            height: 50%;
-            object-fit: contain;
-            display: block;
-            margin: auto;
-        }
-
-        .game-thumbnail-emoji {
-            font-size: 60px;
-        }
-
-        .game-info {
-            padding: 15px;
-            display: flex;        
-            flex-direction: column;
-            flex-grow: 1;
-        }
-
-        .game-title {
-            font-size: 1.3em;
-            font-weight: bold;
-            margin-bottom: 8px;
-            color: #333;
-            display: flex;
-            align-items: center;
-        }
-
-        .game-description {
-            font-size: 0.95em;
-            color: #666;
-            margin-bottom: 10px;
-            line-height: 1.4;
-        }
-
-        .game-author {
-            font-size: 0.9em;
-            color: #0033A0;
-            font-weight: 600;
-            margin-top: 10px;
-            padding-top: 10px;
-            border-top: 1px solid #eee;
-        }
-
-        .page {
-            display: none;
-        }
-
-        .page.active {
-            display: block;
-        }
-
-        .about-content {
-            background: rgba(255, 255, 255, 0.95);
-            color: #333;
-            padding: 40px;
-            border-radius: 15px;
-            max-width: 900px;
-            margin: 40px auto;
-            line-height: 1.8;
-        }
-
-        .about-content h2 {
-            color: #0033A0;
-            margin-bottom: 20px;
-            font-size: 2em;
-        }
-
-        .about-content p {
-            margin-bottom: 15px;
-        }
-
-        .about-content h3 {
-            color: #0033A0;
-            margin-bottom: 10px;
-        }
-
-        .about-content strong {
-            color: #0033A0;
-        }
-
-        .about-content ul {
-            margin-left: 40px;
-            margin-bottom: 15px;
-        }
-
-        .about-content li {
-            margin-bottom: 8px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 30px;
-            background: rgba(0, 0, 0, 0.3);
-            margin-top: 40px;
-        }
-
-        footer a {
-            color: #FDB71A;
-            margin: 0 10px;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        .no-games {
-            width: 100%;
-            text-align: center;
-            padding: 60px 20px;
-            font-size: 1.2em;
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        @media (max-width: 768px) {
-            .games-container {
-                gap: 20px;
-            }
-
-            .game-card {
-                width: 100%;
-                max-width: 280px;
-            }
-
-            h1 {
-                font-size: 2em;
-            }
-
-            .logo {
-                width: 60px;
-                height: 60px;
-            }
-
-            .logo-container {
-                flex-direction: column;
-                gap: 10px;
-            }
-
-            .subtitle {
-                font-size: 1em;
-            }
-
-            .trimester-toggles button {
-                padding: 10px 20px;
-                font-size: 14px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <!-- The main body code for the index page. -->
 <body>
