--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
     <!-- The header code for the index page. -->
     <header>
         <div class="logo-container">
+            <!-- Page logo -->
             <img src="global-images/cmms-8bit-logo.png" alt="Cougar Mountain Middle School" class="logo">
+            <!-- Page title -->
             <h1>SeeSeePortal</h1>
         </div>
+        <!-- Page subtitle -->
         <p class="subtitle" style="color: #fbb61c;"><em><strong>Cheaper, weirder, and better than the original.</em></strong></p><p>Games created by Cougar Mountain Middle School Game Design students</p>
         <br>
+        <!-- Page links. -->
         <nav>
             <a href="#" class="nav-link active" data-page="home">Home</a>
             <a href="#" class="nav-link" data-page="about">About</a>
