--- a/games/2025-2026/t1/manage-a-shedletsky/index.html
+++ b/games/2025-2026/t1/manage-a-shedletsky/index.html
@@ -145,7 +145,7 @@
     
     <div class="game-container">
         <div class="game-frame">
-            <iframe src="game-index.html" class="game-iframe" scrolling="no" allow="scripts"></iframe>
+            <iframe src="game-index.html" ... sandbox="allow-scripts allow-same-origin"></iframe>
         </div>
 
         <div><p><em>Click into the game frame to start.</em></p><br></div>
