Troubleshooting broken game

--- a/games/2025-2026/t1/manage-a-shedletsky/index.html
+++ b/games/2025-2026/t1/manage-a-shedletsky/index.html
@@ -145,7 +145,7 @@
     
     <div class="game-container">
         <div class="game-frame">
-            <iframe src="game-index.html" ... sandbox="allow-scripts allow-same-origin"></iframe>
+            <iframe src="game-index.html" class="game-iframe" scrolling="no" allow="scripts"></iframe>
         </div>
 
         <div><p><em>Click into the game frame to start.</em></p><br></div>
@@ -154,7 +154,7 @@
         <div class="game-info">
             <h1>Manage a Shedletsky</h1>
             <p class="description">
-                Use swords, barbs, and axes to fight against your friends. Fight on many different maps.
+                Press buttons and whatnot to interact with your own virtual Shedletsky!
             </p>
             <div class="meta">
                 <strong>Created by: XL</strong><br>
