--- a/games/2025-2026/t1/manage-a-shedletsky/index.html
+++ b/games/2025-2026/t1/manage-a-shedletsky/index.html
@@ -142,6 +142,14 @@
 </head>
 <body>
     <a href="../../../../index.html" class="back-button">← Back to Portal</a>
+
+    <!-- Alert Banner -->
+    <div style="background: rgba(253, 183, 26, 0.95); color: #0033A0; padding: 20px; text-align: center; font-weight: 600; margin: 20px auto 40px auto; max-width: 90%; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+        ⚠️ Note: Sound is not working as expected on this site. <br>
+        If you want to play with sound, use the Code.org source link below.
+    </div>
+    
+    <!-- Rest of your page content -->
     
     <div class="game-container">
         <div class="game-frame">
