--- a/index.html
+++ b/index.html
@@ -189,15 +189,15 @@
                 author: "JL",
                 folder: "games/2025-2026/t1/the-buzzers"
             },
-            //{
-            //    title: "Hollow Knight vs. Hornet",
-            //    trimester: "trimester1",
-            //    thumbnail: "",
-            //    description: "Play as a character from Hollow Knight and fight a character called Hornet.",
-            //    players: "1",
-            //    author: "MK",
-            //    folder: "games/2025-2026/t1/hollow-knight-v-hornet"
-            //},
+            {
+                title: "Hollow Knight vs. Hornet",
+                trimester: "trimester1",
+                thumbnail: "games/2025-2026/t1/hollow-knight-v-hornet/assets/399bb60c-31de-491a-86eb-4ea47c30050e.png",
+                description: "Play as a character from Hollow Knight and fight a character called Hornet.",
+                players: "1",
+                author: "MK",
+                folder: "games/2025-2026/t1/hollow-knight-v-hornet"
+            },
             {
                 title: "Manage a Shedletsky",
                 trimester: "trimester1",
