Added favicon and noindex

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Telling search engines NOT to index it for search results. -->
+    <meta name="robots" content="noindex, nofollow">
+    <!-- Setting the title for the website, that shows in a browser tab and search engines (not on the site). -->
     <title>SeeSeePortal - CMMS Game Design</title>
+    <!-- Setting the favicon for the website (the icon in the browser tab) -->
+    <link rel="icon" href="global-images/cmms-8bit-logo.png" type="image/png">
     <!-- Pulling in custom fonts from Google Fonts to use on this site -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
