--- a/games/2025-2026/t1/alien-fight/index.html
+++ b/games/2025-2026/t1/alien-fight/index.html
@@ -145,7 +145,7 @@
     <a href="../../../../index.html" class="back-button">← Back to Portal</a>
     
     <div class="game-container">
-        <div class="game-frame">
+        <div class="game-frame" onclick="document.querySelector('.game-iframe').contentWindow.focus()">
             <iframe src="game-index.html" class="game-iframe" scrolling="no"></iframe>
         </div>
 
