Added more games

--- a/games/2025-2026/t1/pong/index.html
+++ b/games/2025-2026/t1/pong/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Title - SeeSeePortal</title>
+    <title>Pong - SeeSeePortal</title>
     <style>
         * {
             margin: 0;
@@ -149,18 +149,17 @@
     
     <div class="game-container">
         <div class="game-frame">
-            <iframe src="https://studio.code.org/projects/gamelab/c56faBB4Zw7a0MXkVujPng3oEJ79e8fId9lz-ydhFOE/embed" class="game-iframe" scrolling="no"></iframe>
+            <iframe src="https://studio.code.org/projects/gamelab/6D08DhBozc5a3HXYmAHiPyAQhiOM39KEJ9ePC78A6ww/embed" class="game-iframe" scrolling="no"></iframe>
         </div>
 
         <div class="game-info">
-            <h1>Space Adventure</h1>
+            <h1>Pong</h1>
             <p class="description">
-                Navigate through space and avoid asteroids in this exciting game! 
-                Use the arrow keys to control your spaceship and see how long you can survive.
+                Pong
             </p>
             <div class="meta">
-                <strong>Created by:</strong> AJ<br>
-                <strong>Published:</strong> November 15, 2025
+                <strong>Created by:</strong> WB<br>
+                <strong>Published:</strong> November 21, 2025
             </div>
         </div>
     </div>
