--- a/index.html
+++ b/index.html
@@ -257,6 +257,42 @@
                 author: "EN",
                 folder: "games/2025-2026/t1/stick-parkour-speed-run"
             },
+            {
+                title: "CFB 25",
+                trimester: "trimester1",
+                thumbnail: "games/2025-2026/t1/cfb-25/assets/uw-logo.png",
+                description: "CFB 25",
+                players: "1",
+                author: "RA",
+                folder: "games/2025-2026/t1/cfb-25"
+            },
+            {
+                title: "Cars",
+                trimester: "trimester1",
+                thumbnail: "",
+                description: "Cars",
+                players: "1",
+                author: "BB",
+                folder: "games/2025-2026/t1/cars"
+            },
+            {
+                title: "JH",
+                trimester: "trimester1",
+                thumbnail: "",
+                description: "JH",
+                players: "1",
+                author: "JH",
+                folder: "games/2025-2026/t1/jh"
+            },
+            {
+                title: "Pong",
+                trimester: "trimester1",
+                thumbnail: "",
+                description: "Pong",
+                players: "1",
+                author: "WB",
+                folder: "games/2025-2026/pong"
+            },
 
             // Trimester 2 Games (trimester: trimester2)
             // Need one array for every game.
